Corrected spacing and added fonts and colors

--- a/module2-solution/css/stylesheet.css
+++ b/module2-solution/css/stylesheet.css
@@ -4,6 +4,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Basic Styles */
@@ -11,6 +12,8 @@
 h1 {
 	text-align: center;
 	font-size: 1.75em;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 
 h2 {
@@ -20,13 +23,19 @@ h2 {
 
 p {
 	clear: right;
-	padding: 5px;
+	padding: 10px;
 }
+
+/* Class Styles */
 
 .row {
 	width: 100%;
 }
 
+.content{
+	border: 1px solid black;
+	background-color: gray;
+}
 .menu-heading {
 	float: right;
 	border: 1px solid black;
@@ -36,12 +45,27 @@ p {
 	text-align: center;
 }
 
+/* Id Styles */
+#chicken {
+	background-color: pink;
+}
+
+#beef {
+	background-color: red;
+	color: white;
+}
+
+#sushi {
+	background-color: beige;
+}
+
+
 /* Desktop Version */
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
 		.col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 			float: left;
-			border: 1px solid blue;	
+			padding: 10px;
 	} 
 	.col-lg-1 {
 		width: 8.33%;
@@ -86,7 +110,7 @@ p {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, 
 		.col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 			float: left;
-			border: 1px solid purple;
+			padding: 10px;
 	} 
 	.col-md-1 {
 		width: 8.33%;
@@ -132,7 +156,7 @@ p {
 	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, 
 		.col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 			float: left;
-			border: 1px solid red;
+			padding: 10px;
 	} 
 	.col-sm-1 {
 		width: 8.33%;
